<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_notebooke"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.artyom.task_4_notebook.MainNotebookeActivity">

    <TextView
    android:id="@+id/id_person"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:hint="@string/person_id" />
    <TextView
        android:id="@+id/fname_person"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/person_sname"
        android:layout_below="@+id/id_person"
        />
    <TextView
        android:id="@+id/sname_person"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/person_lnamestr"
        android:layout_below="@+id/fname_person"
        />
    <TextView
        android:id="@+id/phone_person"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/person_phone"
        android:layout_below="@+id/sname_person"
        />
    <TextView
        android:id="@+id/mail_person"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/person_email"
        android:layout_below="@+id/phone_person"
        />
    <TextView
        android:id="@+id/skype_person"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/person_skype"
        android:layout_below="@+id/mail_person"
        />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/person_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="18dp" />
</RelativeLayout>
